# InventoryManagement

./: Example Columns  - Sheet1.csv  README.md  amz_item_validator.py  dependencies.txt  mongo_write.py  parseCSV.py  pyproject.toml
Client/client/: package-lock.json  package.json
Client/client/src/: App.css  App.js  index.js  navData.js
Client/client/src/components/Analysis/: analysis.js
Client/client/src/components/Catalog/: AddProductDialog.js  Catalog.css  Catalog.js  EnhancedTable.js  TablePaginationActions.js  TableToolbar.js
Client/client/src/components/Dashboard/: Dashboard.css  Dashboard.js
Client/client/src/components/Data/: AddProductDialog.js  GlobalFilter.js  Table.js  TableToolbar.js  data.css  data.js
Client/client/src/components/Header/: Navbar.css  Navbar.js  Navbar.module.css
Client/client/src/components/History/: History.css  History.js
Client/client/src/components/Home/: Catalog.css  Catalog.js
Client/client/src/components/Invoices/: invoices.js  invoices.module.css  invoices_ex.js
Mock_Data/: Catalog_Mock.csv  Inventory_Mock.csv  Mock_Costs.csv  Sales_Mock.csv
Scripts/: CSV_output.csv  amazon_api_test.py  amz_item_validator.py  auth_validator.py  companies_validator.py  mongo_read.py  mongo_update.py  mongo_write.py  toCSV.py
Server/: db.sqlite3
Server/Server/: settings.py  urls.py
Server/amazon_api/: controllers.py  urls.py  views.py
Server/amz_items/: apps.py  controllers.py  middleware.py  urls.py  validator.py  views.py
Server/authentication/: controllers.py  urls.py  validator.py  views.py
env/: pyvenv.cfg
(+24 files in other folders)
